--- a/index.html
+++ b/index.html
@@ -134,8 +134,11 @@
 
               <div class="flex-1 page-container">
                 <div class="page-a margined lines">
-                  <div contenteditable="true" class="top-margin"></div>
+                  <div contenteditable="true" class="top-margin">
+                  <div contenteditable="true" id="customt"class="top-margin"></div></div>
                   <div class="display-flex left-margin-and-content">
+                    <div contenteditable="true" class="left-margin">
+                    <div contenteditable="true" id="customl" class="left-margin"></div></div>
                     <div class="paper-content" id="note" contenteditable="true">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Ut rhoncus dui eget tortor feugiat iaculis. Morbi et dolor
